--- a/io/07-Path/.project
+++ b/io/07-Path/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>07-Path Operations</name>
+	<name>07-Path</name>
 	<comment></comment>
 	<projects>
 	</projects>
