--- a/concurrency/09-Concurrent Random Numbers/.project
+++ b/concurrency/09-Concurrent Random Numbers/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Concurrent Random Numbers</name>
+	<name>09-Concurrent Random Numbers</name>
 	<comment></comment>
 	<projects>
 	</projects>
